# catacomb

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .golangci.yml  .goreleaser.yaml  .markdownlint.json  .testcoverage.yml  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.goreleaser  Makefile  README.md  SECURITY.md  buf.gen.yaml  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor.yml
aggregate/: aggregate.go  aggregate_test.go  cells.go  cells_test.go  quantile.go  quantile_test.go  scale_bench_test.go  tasks.go  tasks_test.go
bench/: basket.go  basket_internal_test.go  basket_test.go  manifest.go  manifest_internal_test.go  manifest_test.go
calibrate/: calibrate.go  calibrate_test.go  render.go  render_test.go
cdc/: cdc.go  cdc_test.go
config/: config.go  config_test.go  env.go  env_test.go  merge.go  merge_test.go  parse.go  parse_test.go  validate.go  validate_test.go
daemon/: annotate.go  annotate_test.go  copy.go  copy_test.go  daemon.go  daemon_test.go  diff.go  diff_test.go  discovery.go  discovery_test.go  grpc.go  grpc_test.go  mark.go  mark_test.go  payload.go  payload_test.go  phase.go  phase_test.go  server.go  server_test.go  sessions.go  sessions_test.go  socket.go  socket_test.go  sse.go  sse_test.go  subagent.go  subagent_test.go  subscribe.go  subscribe_test.go  testsupport.go  transcript.go  transcript_test.go
diff/: align.go  align_test.go  diff.go  diff_test.go  lcs.go  lcs_test.go  marker_stepkey_test.go  scoped_stepkey_test.go
docs/: PITCH.md  README.md  RELEASING.md  VERSIONING.md  glossary.md
e2e/: answer.sh  basket-codex-mcp.yaml  basket-codex-skill.yaml  basket-codex-subagent.yaml  basket-codex.yaml  basket-composite.yaml  basket-continuous.yaml  basket-failmode.yaml  basket-mcp.yaml  basket-nested.yaml  basket-nodes.yaml  basket-presence.yaml  basket-redaction.yaml  basket-skill.yaml  basket-sql.yaml  basket-subagent.yaml  basket-tokensin.yaml  bigprompt.sh  codex-live.sh  codex-mcp-live.sh  codex-skill-live.sh  codex-subagent-live.sh  composite.sh  echo.sh  failmode.sh  mcp-record.sh  mcp.json  nested.sh  nodechain.sh  presence.sh  redaction.sh  run.sh  skill.sh  sql-golden.csv  sql-live.sh  subagent.sh  verify_sql.py  (+1 more)
integrations/deepeval/: .gitignore  README.md  pyproject.toml
integrations/deepeval/src/catacomb_deepeval/: __main__.py  adapter.py  cli.py  expected.py  model.py  reader.py  trace_replay.py
integrations/deepeval/tests/: conftest.py  test_adapter_dicts.py  test_adapter_testcase.py  test_cli.py  test_expected.py  test_integration_toolcorrectness.py  test_integration_trace_metrics.py  test_model_steps.py  test_reader.py  test_reader_steps.py  test_trace_replay.py
integrations/deepeval/tests/testdata/: expected_objects.json  seam_expected_fail.json  seam_expected_pass.json  seam_session.jsonl  session.jsonl  session_no_payload.jsonl  session_subagent.jsonl  session_tool_final.jsonl
integrations/judge/: README.md  pyproject.toml
integrations/judge/src/catacomb_judge/: __init__.py  __main__.py  _io.py  _metrics.py  cli.py
integrations/judge/tests/: test_agreement.py  test_io.py  test_metrics.py  test_panel.py
integrations/verifier/: .gitignore  README.md  pyproject.toml
integrations/verifier/src/catacomb_verifier/: __init__.py  _tables.py
integrations/verifier/tests/: test_cell.py  test_compare_tables.py  test_emit.py
(+781 files in other folders)
