[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catacomb-verifier"
version = "0.1.0"
description = "Stdlib-only SDK for authoring catacomb verifiers (exec-contract env, artifact resolution, scores-JSONL)"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/catacomb_verifier"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
